# ULLM

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  RELEASE-NOTES-v0.2.0-rc1.md  SECURITY.md
.github/: CODEOWNERS
.github/workflows/: ci.yml
bindings/python/: Cargo.toml  pyproject.toml
bindings/python/python/ullm/: __init__.py
bindings/python/src/: lib.rs
bindings/ts/: Cargo.toml  package.json
bindings/ts/bindings/ts/pkg-node/: ullm_ts_bg.wasm.d.ts
bindings/ts/demo/: headless_click.mjs  index.html  package-lock.json  package.json  run_e2e.mjs  serve.mjs
bindings/ts/pkg-node/: ullm_ts.d.ts  ullm_ts.js
bindings/ts/src/: lib.rs
crates/ullm-attest/: Cargo.toml
crates/ullm-attest/src/: evidence.rs  lib.rs  mock.rs  nvidia.rs  real_verifier.rs  signature.rs  snp.rs  tdx.rs  verifier.rs
crates/ullm-bench/: Cargo.toml
crates/ullm-bench/benches/: aead.rs  attest.rs  handshake.rs  kex.rs  layer_zk.rs  mpc.rs  onion.rs  ratchet.rs  wire.rs
crates/ullm-bench/src/: fixtures.rs  lib.rs
crates/ullm-client/: Cargo.toml
crates/ullm-client/src/: attest_check.rs  lib.rs  session.rs
crates/ullm-client/tests/: integration.rs  mid_stream_rotation.rs
crates/ullm-core/: Cargo.toml
crates/ullm-core/src/: clock.rs  error.rs  ids.rs  lib.rs  shutdown.rs  version.rs
crates/ullm-crypto/: Cargo.toml
crates/ullm-crypto/src/: aead.rs  kdf.rs  kex.rs  lib.rs  ratchet.rs  seal.rs
crates/ullm-federation/: Cargo.toml
crates/ullm-federation/src/: build.rs  lib.rs  multi_vendor.rs  pool.rs
crates/ullm-federation/tests/: phase4_combined.rs
crates/ullm-gateway/: Cargo.toml
crates/ullm-gateway/src/: lib.rs  proxy.rs  rate_limit.rs  session_token.rs  transparency.rs
crates/ullm-handshake/: Cargo.toml
crates/ullm-handshake/src/: lib.rs  messages.rs  state.rs  transcript.rs
crates/ullm-kvcloak/: Cargo.toml
crates/ullm-kvcloak/src/: cloak.rs  lib.rs  matrix.rs  seal.rs  spd.rs
crates/ullm-llm/: Cargo.toml
crates/ullm-llm/src/: lib.rs  real.rs  stub.rs
crates/ullm-model/: Cargo.toml
crates/ullm-model/src/: commit.rs  lib.rs  model.rs  trace.rs
crates/ullm-mpc/: Cargo.toml
crates/ullm-mpc/src/: lib.rs  party.rs  share.rs  transcript.rs
crates/ullm-overlay/: Cargo.toml
crates/ullm-overlay/src/: layer.rs  lib.rs  relay.rs  transport.rs
crates/ullm-phala/: Cargo.toml
crates/ullm-phala/src/: adapter.rs  attest.rs  descriptor.rs  lib.rs
crates/ullm-receipts/: Cargo.toml
crates/ullm-receipts/src/: lib.rs
crates/ullm-tee/: Cargo.toml
crates/ullm-tee/src/: identity.rs  inference.rs  lib.rs  nonce_registry.rs  service.rs  tenant.rs
crates/ullm-threshold/: Cargo.toml
crates/ullm-threshold/src/: dkg.rs  lib.rs  participant.rs  sign.rs
crates/ullm-tls/: Cargo.toml
crates/ullm-tls/src/: lib.rs
crates/ullm-transparency/: Cargo.toml
crates/ullm-transparency/src/: auditor.rs  inclusion.rs  lib.rs  log.rs  merkle.rs  sth.rs  witness.rs
crates/ullm-wire/: Cargo.toml
crates/ullm-wire/src/: codec.rs  control.rs  frame.rs  lib.rs  replay.rs
crates/ullm-zk/: Cargo.toml
crates/ullm-zk/src/: circuit.rs  layer.rs  lib.rs
docs/: OPERATIONS.md  SLO.md
docs/audit/: AUDIT-REFRESH-BRIEF.md  FINDINGS-INDEX.md  FINDINGS-P10.md  FINDINGS-P11.md  FINDINGS-P12.md  FINDINGS-P13.md  FINDINGS-P2.md  FINDINGS-P3.md  FINDINGS-P4.md  FINDINGS-P5.md  FINDINGS-P6.md  FINDINGS-P7.md  FINDINGS-P8.md  FINDINGS-P9.md  FINDINGS.md  KNOWN-ISSUES.md  SCOPE-REFRESH.md  SCOPE.md  THREAT-MODEL.md
infra/: README.md
infra/azure-cc/: main.tf
infra/phala/: deploy.sh
infra/tee-image/: flake.nix  manifest.json
scripts/: build_audit_packet.sh
tools/ullm-demo/: Cargo.toml
tools/ullm-demo/src/: main.rs
tools/ullm-log-auditor/: Cargo.toml
tools/ullm-log-auditor/src/: main.rs
tools/ullm-log-auditor/tests/: cli_e2e.rs
tools/ullm-phase4-demo/: Cargo.toml
tools/ullm-phase4-demo/src/: main.rs
tools/ullm-watcher/: Cargo.toml
tools/ullm-watcher/src/: lib.rs  main.rs
tools/ullm-watcher/tests/: cli_e2e.rs
