[build-system]
requires = ["maturin>=1.5"]
build-backend = "maturin"

[project]
name = "ullm"
version = "0.2.0rc1"
description = "Python bindings for the ullm private-LLM client SDK."
license = { text = "Apache-2.0" }
requires-python = ">=3.9"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "ullm._ullm_py"
