[package]
name = "ullm-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "ML-KEM hybrid KEX, AEAD record layer, and Signal-style ratchet."

[dependencies]
ullm-core = { workspace = true }
ml-kem = { workspace = true }
x25519-dalek = { workspace = true }
chacha20poly1305 = { workspace = true }
aes-gcm-siv = { workspace = true }
hkdf = { workspace = true }
sha2 = { workspace = true }
subtle = { workspace = true }
zeroize = { workspace = true }
rand_core = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
hex = { workspace = true }
rand = { workspace = true }
