[package]
name = "ullm-federation"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Multi-vendor k-of-n attestation + provider pool + reproducible-build admission."

[dependencies]
ullm-core = { workspace = true }
ullm-attest = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
hex = { workspace = true }
ed25519-dalek = { workspace = true }
x25519-dalek = { workspace = true }
ullm-attest = { workspace = true, features = [] }
ullm-model = { workspace = true }
ullm-mpc = { workspace = true }
ullm-threshold = { workspace = true }
ullm-overlay = { workspace = true }
ullm-zk = { workspace = true }
