[package]
name = "ullm-model"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Synthetic deterministic transformer-shaped model. Phase 3 stand-in for real inference; the activation commitments and weight commitment are the real cryptographic objects."

[dependencies]
ullm-core = { workspace = true }
ullm-zk = { workspace = true }
halo2_proofs = "0.3"
halo2_gadgets = "0.3"
ff = "0.13"
sha2 = { workspace = true }
hkdf = { workspace = true }

[dev-dependencies]
hex = { workspace = true }
