[package]
name = "ullm-transparency"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Append-only Sigsum-style transparency log: persisted leaves, signed tree heads, inclusion proofs, witness cosigning."

[dependencies]
ullm-core = { workspace = true }
ed25519-dalek = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde-big-array = { workspace = true }
thiserror = { workspace = true }
parking_lot = "0.12"
# P10-FIX-C: torn-write recovery on reopen emits an operator-visible
# warning when the JSONL tail is truncated. No runtime cost without a
# subscriber; ullm-gateway's tracing-subscriber picks it up at info+.
tracing = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
tempfile = "3"
