[package]
name = "ullm-wire"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Binary frame format, codec, and sliding-window replay protection."

[dependencies]
ullm-core = { workspace = true }
ullm-crypto = { workspace = true }
thiserror = { workspace = true }
bitflags = { workspace = true }
