[package]
name = "ullm-phase4-demo"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Phase 4 capabilities walkthrough: MPC + multi-vendor + threshold receipts + onion routing."

[[bin]]
name = "ullm-phase4-demo"
path = "src/main.rs"

[dependencies]
ullm-core = { workspace = true }
ullm-attest = { workspace = true }
ullm-model = { workspace = true }
ullm-mpc = { workspace = true }
ullm-federation = { workspace = true }
ullm-threshold = { workspace = true }
ullm-overlay = { workspace = true }
ullm-receipts = { workspace = true }
ullm-zk = { workspace = true }
ed25519-dalek = { workspace = true }
x25519-dalek = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
